# Ox

./: .gitattributes  .gitignore  AGENTS.md  BUGFIX_FINDINGS_POLLUTION.md  CLAUDE.md  COMMIT_MSG.txt  CONTEXT_OPTIMIZATION_ANALYSIS.md  Cargo.toml  FIX_SUMMARY.md  GITNEXUS_INTEGRATION_ANALYSIS.md  LICENSE  README.md
.cursor/plans/: react_llm-driven_termination_7cc6a9d2.plan.md
.github/workflows/: rust.yml
.ox/: cost_tracking.json  git_changes.txt  session.jsonl
.ox/refs/: session_0_step0_20260529_032301.md  (+148 more)
crates/ox-cli/: Cargo.toml
crates/ox-cli/src/: app_runtime.rs  event_loop.rs  keyword_extraction.rs  main.rs  spec_helpers.rs
crates/ox-cli/src/handlers/: agent_handler.rs  key_handler.rs  mod.rs  pre_turn.rs  session_handler.rs
crates/ox-cli/src/helpers/: context.rs  formatting.rs  input.rs  mod.rs  session.rs
crates/ox-cli/src/middleware/: compression.rs  feedback.rs  interjection.rs  mod.rs
crates/ox-cli/src/slash_commands/: feedback.rs  help.rs  index.rs  memory.rs  mod.rs  model.rs  session.rs  skill.rs  system.rs  trust.rs
crates/ox-cli/src/terminal/: app.rs  event.rs  input_pane.rs  markdown.rs  mod.rs  output_pane.rs  render.rs
crates/ox-core/: Cargo.toml
crates/ox-core/src/: config.rs  lib.rs  source_paths.rs
crates/ox-core/src/agent/: auto_reflect.rs  blackboard.rs  business_gate.rs  collaboration.rs  completion.rs  context_injector.rs  context_offloader.rs  context_slim.rs  enforcer.rs  engine.rs  error_recovery.rs  execute_handoff.rs  exploration_snapshot.rs  explore_reflect.rs  findings.rs  flow_e2e.rs  git_undo.rs  idle_narrative.rs  intent_routing.rs  interjection.rs  interrupt.rs  intervention.rs  memory_bridge.rs  memory_offload.rs  mod.rs  mod_builders.rs  mode.rs  onboarding.rs  perception.rs  phase.rs  plan_tracker.rs  post_edit_verification.rs  preflight.rs  presentation.rs  progress.rs  read_guard.rs  repeat_guard.rs  requirement_clarification.rs  round_memory.rs  safety_gate.rs  (+23 more)
crates/ox-core/src/agent/engine/: exploration.rs  impl_tracking.rs  validation.rs
crates/ox-core/src/agent/gate/: business_gate.rs  explore_reflect.rs  gate.rs  gates.rs  idle_narrative.rs  mod.rs  read_guard.rs  repeat_guard.rs  safety_gate.rs
crates/ox-core/src/agent/gatekeeper/: gate.rs  gates.rs  mod.rs
crates/ox-core/src/config/: mod.rs  rules.rs
crates/ox-core/src/context/: assembler.rs  budget.rs  compressed_store.rs  context_injector.rs  context_offloader.rs  context_slim.rs  effort.rs  mod.rs  refinement.rs  skill_prompts.rs  spec.rs  system_prompt.rs
crates/ox-core/src/cost/: mod.rs
crates/ox-core/src/council/: mod.rs  orchestrator.rs
crates/ox-core/src/embedding/: bge.rs  chunker.rs  kadane.rs  mod.rs  reranker.rs
crates/ox-core/src/feedback/: ema_tracker.rs  mod.rs  override_detector.rs  rollback.rs
crates/ox-core/src/file_index/: mod.rs  registry.rs
crates/ox-core/src/knowledge/: bm25.rs  bridge.rs  consolidation.rs  embedding.rs  entity.rs  extractor.rs  graph.rs  index_progress.rs  keywords.rs  language.rs  layering.rs  live_update.rs  memory_cluster.rs  memory_node.rs  mod.rs  retrieval.rs  vector_store.rs
crates/ox-core/src/llm/: anthropic.rs  mod.rs  openai.rs  openai_sse.rs  sse.rs  tokenizer.rs  universal_adapter.rs
crates/ox-core/src/mcp/: client.rs  detect.rs  gitnexus.rs  mod.rs
crates/ox-core/src/memory/: blackboard.rs  hybrid_storage.rs  layering.rs  memory_bridge.rs  memory_offload.rs  memory_vector.rs  mod.rs  round_memory.rs  semantic.rs  store.rs  turn_memory.rs
crates/ox-core/src/message/: mod.rs  session.rs  task_plan.rs
crates/ox-core/src/persona/: mod.rs
crates/ox-core/src/runtime/: directory.rs  mod.rs  project.rs
crates/ox-core/src/safety/: injection.rs  mod.rs  sanitizer.rs
crates/ox-core/src/skill/: dedup.rs  generation.rs  mod.rs  policy.rs
crates/ox-core/src/skill/builtin/: coding-principles.md  concise-communication.md  concise-direct.md  documentation-output.md  engineering-practices.md  explore-execute-link.md  ox-output-discipline.md  ox-systemic-comprehension.md  ox-unified-tooling.md
crates/ox-core/src/slash/: mod.rs
crates/ox-core/src/symbol/: embedding.rs  extractor.rs  language.rs  mod.rs  types.rs  vector_store.rs
crates/ox-core/src/tools/: ast_extractor.rs  code_graph.rs  code_search.rs  complete_and_check.rs  content_validation.rs  delete_range.rs  edit_file.rs  file_list.rs  file_patch.rs  file_read.rs  file_search.rs  file_write.rs  find_symbol.rs  git.rs  git_commit.rs  git_diff.rs  git_status.rs  intent_classifier.rs  load_skill.rs  memory_search.rs  mod.rs  project_detect.rs  read_symbol.rs  recall.rs  shell_exec.rs  web_fetch.rs
docs/: BGE重排真实启用验证.md  Cross-Encoder重排实现方案.md  LLM响应中断问题诊断指南.md  LLM行为限制系统设计.md  LLM裁判反馈闭环设计.md  LLM驱动语义关联系统实施报告.md  Markdown渲染修复说明.md  Markdown渲染隔离修复.md  OpenAI-API-tool-call-id不匹配修复.md  Ox-CLI-技术设计文档.md  Ox_2.0_全新架构设计.md  Phase3_实施进度报告.md  Phase3_智能工具过滤实施方案.md  README_摘要.md  ShellExec输出截断与UTF8编码修复.md  Spec_Council_模式移除总结.md  Spec_Mode_方案B使用指南.md  System_Prompt_工具使用指南优化报告.md  UI优化改进说明.md  Workflow_3Phase_简化方案实施说明.md  Workflow_Engine_完整调用流程.md  ast.md  code_search.md  file_write_Missing_Parameter_修复方案.md  file_write优化报告.md  file_write失败诊断与优化.md  file_write失败问题-快速修复.md  file_write持续优化-Phase2.md  file_write路径参数优化总结.md  main_rs_analysis.md  main_rs_中间件集成报告.md  main_rs_拆分影响分析.md  main_rs_模块化重构方案.md  main_rs_重构完成报告.md  main_rs_重构最终报告.md  new.md  tool.md  三系统协同使用指南.md  两阶段记忆压缩优化方案.md  人格演化与提示词大小控制.md  (+40 more)
(+11 files in other folders)
