[workspace]
resolver = "2"
members = ["crates/ox-cli", "crates/ox-core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["stream", "json"] }

# Async patterns
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Hashing & detection
blake3 = "1"
which = "7"
dirs = "6"
regex = "1"
glob = "0.3"
rand = "0.8"

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Syntax highlighting
syntect = "5"

# Markdown parsing
pulldown-cmark = "0.12"

# Unicode width calculation
unicode-width = "0.2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Embedding / AI runtime (candle 0.8 + tokenizers)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"

# ox-core
ox-core = { path = "crates/ox-core" }
