[package]
name = "ox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ox"
path = "src/main.rs"

[dependencies]
ox-core = { workspace = true }
tokio = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
syntect = { workspace = true }
pulldown-cmark = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
