[package]
name = "ox-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
rusqlite = { workspace = true }
rand = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
safetensors = "0.4"
half = "2"

[dev-dependencies]
tempfile = "3"
